--- a/Web.css
+++ b/Web.css
@@ -1,18 +1,47 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+/*Head*/
+header { 
+    padding-top: 20px;
+    background-color: darkgray;
+    border-bottom: 5px solid rgb(147, 147, 229);
+}
+
+header h1 {
+    margin-bottom: 20px;
+}
+
+.header-inner {
+    margin: 0 auto;
+    width: 75%;
+}
+
 nav {
-    border-bottom: solid 10px black;
+    margin-top: 20px;
 }
+
 li {
-    display: inline-flex;
-    font-family: Arial;
-    padding: 20px;
-    border: solid 5px black;
+    display: inline-block;    
+    padding: 20px;   
 }
+
+nav ul li:hover {
+    cursor: pointer;
+    background-color: rgb(147, 147, 229);
+    color: rgb(255, 255, 255);
+}
+
+.active {
+    background-color: rgb(147, 147, 229);
+    color: rgb(255, 255, 255);
+}
+
+
+/*Body*/
 body {
-    background: url("./1.jpg")
-}
-p {
-    text-transform: uppercase;
-}
-h1 {
-    background-color: green;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: grey;
 }
